[workspace]
resolver = "2"
members = [
    "day01", "day02", "day03", "day04", "day05",
    "day06", "day07", "day08", "day09", "day10",
    "day11", "day12", "day13", "day14", "day15",
    "day16", "day17", "day18", "day19", "day20",
    "day21", "day22", "day23", "day24", "day25"
]

[workspace.dependencies]
# Common dependencies for Advent of Code
# regex = "1"
# itertools = "0.12"
# rayon = "1.8"
# nom = "7"
# petgraph = "0.6"
# num = "0.4"
